# repo2docker-service

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  RELEASE.md  TODO.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: release.yaml  test.yaml
docs/: README.md  requirements.txt
docs/source/: conf.py  contributing.md  index.md
docs/source/explanation/: architecture.md  implementation.md
repo2docker_service/: README.md  __init__.py
repo2docker_service/app/: README.md  app.py  config.py  main.py  test_main.py
repo2docker_service/app/routers/: builds.py
repo2docker_service/frontend/: .gitignore  README.md  package.json
repo2docker_service/frontend/public/: index.html
repo2docker_service/frontend/src/: App.js  App.test.js  index.js  setupTests.js
repo2docker_service/frontend/src/__tests__/: App.test.js
tests/: conftest.py  test_app.py  test_dind_builder.py  test_docker_daemon_registry.py  test_docker_registry.py  test_mocked_builder.py
